Finalicé el punto 2

--- a/Ejercicio-2/Ejercicio-2.tex
+++ b/Ejercicio-2/Ejercicio-2.tex
@@ -2,7 +2,7 @@
 
 En esta instancia del informe, se procede a comparar compuertas lógicas del tipo NOR de diversas tecnologías. Para ello se vale de las hojas de datos de las compuertas \href{http://www.ti.com/lit/ds/symlink/sn74hc02.pdf}{74HC02}, \href{http://www.ti.com/lit/ds/symlink/sn74hct02.pdf}{74HCT02} y \href{http://www.ti.com/lit/ds/symlink/sn74ls02.pdf}{74LS02}. Previo a dicho análisis, cabe detallar cada una de las tecnologías. Primero, se encuentra el 74HC02, siendo este, como su nombre lo indica, del tipo HC, cuyas siglas significan ``High-speed CMOS'', tecnología caracterizada por ser de baja potencia y alta velocidad. Luego se encuentra el 74HCT02, siendo HCT una variación de las HC. Esta denominación proviene de las mismas siglas previamente mencionadas, solo que ademas posee compatibilidad con la tecnología conocida como ``logica transistor–transistor'' (TTL). En otras palabras, este tipo de compuertas puede operar bajo dicho estándar de tensiones, tanto de alimentación como de input.\footnote{``Logic family'', En.wikipedia.org, 2019. [Online]. Available: \url{https://en.wikipedia.org/wiki/Logic\_family\#HC\_logic}. [Accessed: 21- Sep- 2019].} Finalmente se encuentra el 74LS02, cuyas siglas provienen de ``Low~-power Schottky''. Los integrados de esta familia se caracterizan por estar hechos con tecnología TTL.\footnote{``Serie 7400'', Es.wikipedia.org, 2019. [Online]. Available: \url{https://es.wikipedia.org/wiki/Serie\_7400}. [Accessed: 21- Sep- 2019].} Se destaca que este último, a diferencia de los dos primeros, se caracteriza por ser fabricado mediante el uso de tecnología BJT.
 
-Analizando las respectivas hojas de dato, se recopila información sobre los  valores aceptables de señal, tanto de entrada como de salida. Es así que se realiza la siguiente tabla:
+Analizando las respectivas hojas de datos, se recopila información sobre los  valores aceptables de señal, tanto de entrada como de salida. Es así que se realiza la siguiente tabla:
 \begin{table}[H]
 \centering
 \begin{tabular}{c|c|c|c|c|c|c|c|}
@@ -184,7 +184,7 @@ Es así que se decide observar dicho factor. Se diseñó un circuito que represe
 Luego se analiza el fanout de la conexión presentada en la Figura (\ref{fig:hcls}), ya que no es conveniente llevar adelante la otra conexión presentada, debido a los motivos ya expuestos. Para ello de sebe saber cuatro factores: $I_{OH}$, $I_{OL}$, $I_{IH}$ y $I_{IL}$\footnote{``Familias Lógicas – Evolución cronológica'', Slideplayer.es, 2019. [Online]. Available: \url{https://slideplayer.es/slide/1552774/}. [Accessed: 30- Sep- 2019].}, los cuales son obtenidos de la hoja de datos. De esta forma, se calcula el fanout de la forma
 
 \begin{equation*}
-	FO = Min \left( \frac{I_{OH}}{I_{IH}}, \ \frac{I_{OL}}{I_{IL}} \right) = Min \left( \left| \frac{-4 \ mA}{20 \ \mu A} \right|, \ \left| \frac{4 \ mA}{-0.4 \ mA}\right| \right) = Min \left( 200, \ 10000 \right) = 200
+	FO = Min \left( \frac{I_{OH}}{I_{IH}}, \ \frac{I_{OL}}{I_{IL}} \right) = Min \left( \left| \frac{-400 \ \mu A}{20 \ \mu A} \right|, \ \left| \frac{16 \ mA}{-0.4 \ mA}\right| \right) = Min \left( 20 , 40 \right) = 20
 \end{equation*}
 
 A continuación, se procede a reemplazar la compuerta 74HC02 por la de tecnología HTC. De esta forma, y nuevamente mediante lo expresado en la Tabla (\ref{tabla:vinout}), se obtiene lo siguiente:
@@ -337,14 +337,18 @@ Es así que comparando las Figuras (\ref{fig:medicion1}) y (\ref{fig:medicion2})
 
 Por otro lado, se destaca que en el caso de colocar la compuerta de tecnología HCT a la salida y la LS a la entrada, no genera cambios en el fanout, ya que solo se debe corregir los valores de $I_{OH}$ y $I_{OL}$, los cuales son los mismos que para la tecnología HC.
 
-Finalmente, se presentan las relaciones de tensiones de entrada y salida medidas, variando las combinaciones de tecnologías posibles, para las cuales se empleó un suavizado exponencial para poder obtener mediciones apreciables.
+Finalmente, se presentan las relaciones de tensiones de entrada y salida medidas, variando las combinaciones de tecnologías posibles, para las cuales se empleó el mismo suavizado exponencial para poder obtener mediciones apreciables.
 \begin{figure}[H]
 \centering
-	\includegraphics[width=0.8\textwidth]{ImagenesEjercicio2/Xy.png}
-\caption{Entradas y salidas de las compuertas.}
-\label{fig:medicion2}
+	\includegraphics[width=0.8\textwidth]{ImagenesEjercicio2/Xy-feo.png}
+\caption{Entradas y salidas de las compuertas con tecnologías HC y LS.}
+\label{fig:xy-feo}
+\end{figure}
+\begin{figure}[H]
+\centering
+	\includegraphics[width=0.8\textwidth]{ImagenesEjercicio2/Xy-bien.png}
+\caption{Entradas y salidas de las compuertas con tecnologías HCT y LS.}
+\label{fig:xy-bien}
 \end{figure}
 
-\begin{center}
-	\textcolor{red}{\textbf{AGREGAR CONCLUSIÓN PARA LA ÚLTIMA IMAGEN.}}
-\end{center}
+Se detalla de estas últimas figuras que el funcionamiento de la combinación LS - HCT, siendo el primero la salida y el segundo la entrada, es mucho más acorde y se empeña bajo un correcto funcionamiento, comparándolo con la disposición LS - HC, salida y entrada respectivamente.
