--- a/Ejercicio-8/Ejercicio 8.tex
+++ b/Ejercicio-8/Ejercicio 8.tex
@@ -9,17 +9,17 @@
 
 Los mandos de control o actualmente llamados \quotes{Joysticks} son parte fundamental de varios dispositivos electrónicos utilizados hoy en día. Consolas de videojuegos, sillas de ruedas eléctricas, aeronaves radio-controladas e incluso hasta cohetes de la NASA. En su forma más básica, un potenciómetro, los mandos de control revolucionaron al rededor de finales de la segunda guerra mundial la manera de controlar dispositivos digitales de manera analógica. 
 
-En esta sección del informe nos centraremos en la implementación de un convertidor analógico a digital mediante el uso del Joystick HW-504 junto a la investigación realizada.
+Esta sección del informe se centra en la implementación de un convertidor analógico a digital mediante el uso del Joystick HW-504 junto a la investigación realizada.
 
 \subsection{Joystick HW-504}
 
-El mando de control a utilizar está compuesto por dos potenciómetros, uno para el eje X y otro para el eje Y, y un switch accionado al apretar el mando hacia dentro. El periférico requiere de una alimentación de $5V$ y puede esquematizarse como el siguiente modelo electóonico:
+El mando de control a utilizado está compuesto por dos potenciómetros, uno para el eje X y otro para el eje Y, y un switch accionado al apretar el mando hacia dentro. El periférico requiere de una alimentación de $5V$ y puede esquematizarse como el siguiente modelo electóonico:
 
 \begin{figure}[H]
 	\begin{subfigure}[t]{0.49\textwidth}
 		\centering
 		\includegraphics[width=0.6\textwidth]{Imagenes/joystick.jpg}
-		\caption{Mando de control HW-504 a utilizar$^{0}$.}
+		\caption{Mando de control HW-504 utilizado.}
 		\label{fig:joystick}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.49\textwidth}
@@ -69,8 +69,6 @@ El mando de control a utilizar está compuesto por dos potenciómetros, uno para
 	\end{subfigure}
 \end{figure}
 
-\footnotetext{https://eshop.tecnoconciencia.com.ve/eshop/wp-content/uploads/2017/08/JOYSTICK-ARDUINO.jpg. [Accessed: 23- Sep- 2019].}
-
 \subsection{circuitikz que en algun momento vamos ausar saludos}
 
 \begin{figure}[H]
@@ -113,11 +111,11 @@ El mando de control a utilizar está compuesto por dos potenciómetros, uno para
 
 
 \begin{equation*}
-V_{out} = A_0 (V_{in} - V_{REF}) =
+V_{out} = A_0 (V_{in} - V_{REF}) \approx
 \left\{
 \begin{aligned}
-		& \approx V_{CC} \ \ \ \ \ si \ \ V_{in} > V_{REF} \\		
-		& \approx 0 \ \ \ \ \ \ \ \ \ si \ \ V_{in} < V_{REF}\\		
+		& V_{CC} \ \ \ \ \ si \ \ V_{in} > V_{REF} \\		
+		& 0 \ \ \ \ \ \ \ \ \ si \ \ V_{in} < V_{REF}\\		
 \end{aligned}
 \right.
 \end{equation*}
