--- a/Ejercicio-1/Ejercicio-1.tex
+++ b/Ejercicio-1/Ejercicio-1.tex
@@ -160,7 +160,4 @@ Maximum output current                    &  187.2 $\mu A$             &     216
 \end{tabular}
 \end{table}
  
-
-Las diferencias entre los parámetros para las tres tecnologías son notables,
-{\begin{center}\color{red} \begin{huge}
-PONER CONCLUSIONES \end{huge} \rule{\linewidth}{0.5mm}\end{center} }
+De dichas tablas se observa que, además de ser compatible cada tecnología con sí misma, cualquier combinación de tecnologías es compatible entre sí, ya que se puede notar que tanto el Noise Margin High como el Noise Margin Low son positivos. Este fenómeno se detalla con mayor profundidad en el Ejercicio (\ref{Ejercicio-2}). Otro detalle de compatibilidad a destacar son los distintos Propagation y Transition delays, tanto High to Low com Low to High, ya que estos, al ser tan diversos para cada tecnología, pueden llegar a generar problemas, como el que se detalla en el Ejercicio (\ref{Ejercicio-3}).
