Se agregaron mediciones del punto 6

--- a/Ejercicio-6/Ejercicio-6.tex
+++ b/Ejercicio-6/Ejercicio-6.tex
@@ -93,6 +93,14 @@ Estos parámetros son comparados con un integrado \href{http://noel.feld.cvut.cz
 \label{tab:srl}
 \end{table}
 
+A modo ilustrativo, para no mostrar la totalidad de las mediciones y llenar el informe con estas, se presentan las curvas medidas para el circuito previamente mencionado, en el caso de la propagación de S a Q:
+\begin{figure}[H]	
+	\centering
+	\includegraphics[width=0.8\textwidth]{ImagenesEjercicio6/Medicion-SR.png}
+	\caption{Tensiones medidas para el SR.}
+	\label{fig:medsr}
+\end{figure}
+
 \subsection{Flip Flop D}
 
 Un Flip Flop D es un elemento de memoria sincrónico, el cual cuenta con 2 entradas, siendo una de clock y la otra de la información (Data). Le corresponde la siguiente tabla de verdad:
@@ -183,6 +191,14 @@ Estos tiempos medidos son comparados con un integrado \href{https://pdf1.alldata
 \caption{Mediciones obtenidas para el Flip Flop D.}
 \label{tab:ffd}
 \end{table}
+
+Bajo el mismo criterio que se tomó para el caso del SR, se presenta una de las mediciones realizadas del último circuito analizado, mostrándose así la variación al colocar un uno lógico en D:
+\begin{figure}[H]	
+	\centering
+	\includegraphics[width=0.8\textwidth]{ImagenesEjercicio6/Medicion-DFF.png}
+	\caption{Tensiones medidas para el D Flip Flop.}
+	\label{fig:meddff}
+\end{figure}
 
 A continuación se destaca que, observando las Tablas (\ref{tab:srl}) y (\ref{tab:ffd}), los circuitos armados poseen valores próximos a los de los integrados, evidenciando un buen funcionamiento de estos. En algunos casos, los tiempos de propagación y transición son mayores a los de obtenidos de los comerciales. En otros casos, resalta que dichas variables son menores en los circuitos que en los integrados, factor que se atribuye a la fabricación propia de estos últimos. En otras palabras, el 74HC279 y el 74HC374, debido a su carácter comercial, poseen distintos tipos de consideraciones (estabilidad frente a ruido, temperatura, entre otras) que los desarrollados para este informe no, siendo estas las causantes de las diferencias previamente mencionadas.
 
