--- a/Informe/Informe.tex
+++ b/Informe/Informe.tex
@@ -27,13 +27,13 @@
 \section{Ejercicio 2}
 	\label{Ejercicio-2}
 	\input{../Ejercicio-2/Ejercicio-2.tex}
-\newpage
+	
 \section{Ejercicio 3}
 	\label{Ejercicio-3}
 	\input{../Ejercicio-3/Ejercicio-3.tex}
 \newpage
 \section{Ejercicio 4}
-	\input{../Ejercicio-4/Ejercicio-4.tex}
+%	\input{../Ejercicio-4/Ejercicio-4.tex}
 \newpage	
 \section{Ejercicio 5}
 	\input{../Ejercicio-5/Ejercicio-5.tex}
