Me confundí de repo .-.

--- a/Informe/Header.tex
+++ b/Informe/Header.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[spanish, es-tabla]{babel}
+\usepackage[spanish, es-tabla, es-noshorthands]{babel}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage[a4paper, footnotesep = 1cm, width=18cm, left=2cm, top=2.5cm, height=25cm, textwidth=18cm, textheight=25cm]{geometry}
 %\geometry{showframe}
