--- a/Informe/Header.tex
+++ b/Informe/Header.tex
@@ -16,6 +16,7 @@
 \usepackage{multicol}
 \usepackage{multirow}
 \setlength{\doublerulesep}{\arrayrulewidth}
+\usepackage{booktabs}
 
 \usepackage{hyperref}
 \hypersetup{
